--- a/style/common.css
+++ b/style/common.css
@@ -9,7 +9,6 @@ header .h_all {
     display:flex; flex-flow:row nowrap;
     justify-content:space-between;
     margin:30px 120px; z-index:90;
-    position:absolute; left:0; top:0;
 }
 header .h_all h1 {}
 header .h_all h1 a {}
@@ -18,24 +17,24 @@ header .h_all .h_right {
     display:flex; flex-flow:row nowrap; align-items:center;
 }
 header .h_all .h_right .inquiry {
-    background:rgba(255,255,255,0.5); color:#fff;
+    background:#d9d9d9; color:#fff;
     padding:8px; border:1px solid #fff; border-radius:7px;
     margin-right:35px;
 }
 header .h_all .h_right .language {display:flex; flex-flow:row nowrap; align-items:center; margin-right:30px;}
-header .h_all .h_right .language em {color:#fff; margin-right:10px; font-size:1rem;}
+header .h_all .h_right .language em {color:#222; margin-right:10px; font-size:1rem;}
 header .h_all .h_right .language #lang_btn {background:none;}
 header .h_all .h_right .language #lang_btn img {width:18px; height:18px;}
 header .h_all .h_right .language .english {display:none;}
 header .h_all .h_right .language span {}
 header .h_all .h_right #search_btn {background:none; margin-right:30px;}
-header .h_all .h_right #search_btn img {}
+header .h_all .h_right #search_btn img {width:25px; height:25px;}
 header .h_all .h_right .menu_btn {display:flex; flex-flow:column nowrap; background:none;}
 header .h_all .h_right .menu_btn:hover span:first-child {transform:translateX(8px);}
 header .h_all .h_right .menu_btn:hover span:last-child {transform:translateX(-8px);}
 header .h_all .h_right .menu_btn span {
     display:inline-block; content:'';
-    width:30px; height:3px; background:#fff;
+    width:30px; height:3px; background:#0279bb;
     border-radius:50px; margin-bottom:6px;
     transition:all 0.5s;
 }
@@ -95,13 +94,30 @@ header .menu_all .menu ul li ul {display:flex; flex-flow:column nowrap; }
 header .menu_all .menu ul li > ul > li {margin-top:20px;}
 header .menu_all .menu ul li > ul > li > a {color:#000; transition:all 0.3s;}
 header .menu_all .menu ul li > ul > li > a:hover {color:#888;}
-
+/* 마우스 스크롤 */
+main #scrolltop {
+    position:fixed; right:50px; bottom:30px; z-index:99;
+    background:rgba(200,200,200,0.5); border:1px solid #d9d9d9;
+    border-radius:50px; width:60px; height:60px;
+}
+main #scrolltop img {width:25px; height:25px;}
+main .page_btn {
+    display:flex; flex-flow:row nowrap; justify-content: center;
+    border-bottom:1px solid #d9d9d9; margin-top:150px;
+}
+main .page_btn li {
+    display:flex; align-items: center; justify-content: center;
+    width:150px; height:50px;
+    background:#d9d9d9; transition:all 0.5s;
+}
+main .page_btn li:hover {background:#fff;}
+main .page_btn li a {color:#fff;}
+main .page_btn li:hover a {color:#0279BB;}
 /* footer */
 footer {
-    height:20vh;
-    display:flex; flex-flow:row nowrap; align-items: center;
-    justify-content:space-between; margin:0 180px;
+    height:20vh; border-top:1px solid #d9d9d9;
 }
+footer .footer_all {margin:70px 180px; display:flex; flex-flow:row nowrap; align-items: center; justify-content:space-between;}
 footer .footer_left {display:flex;}
 footer .footer_left h1 {}
 footer .footer_left h1 a {}
