--- a/style/common.css
+++ b/style/common.css
@@ -1,9 +1,9 @@
 body, html {scroll-behavior:smooth;}
 
 /* all */
-header, main, footer {letter-spacing:-0.02em;}
+header, main, footer {letter-spacing:-0.02em; min-width:1920px;}
 /* header */
-header {width:1920px;}
+header {}
 header .h_all {
     width:90%;
     display:flex; flex-flow:row nowrap;
@@ -78,7 +78,7 @@ header .menu_all .closer span {
     background:#0279bb; border-radius:50px;
     transition:all 0.5s;
 }
-header .menu_all .closer span:first-child {transform:translateX(40px) rotate(-40deg);}
+header .menu_all .closer span:first-child {transform:translateX(38px) rotate(-40deg);}
 header .menu_all .closer span:last-child {transform:rotate(45deg);}
 header .menu_all .closer:hover span:first-child {transform:rotate(0) translateX(30px);}
 header .menu_all .closer:hover span:last-child {transform:translateY(10px) rotate(0);}
@@ -89,18 +89,18 @@ header .menu_all .menu .m_all {
     margin-top:30px;
 }
 header .menu_all .menu ul li {}
-header .menu_all .menu ul li a {color:#0279bb;}
+header .menu_all .menu ul li .menu_title {color:#0279bb; font-weight:500;}
 header .menu_all .menu ul li ul {display:flex; flex-flow:column nowrap; }
 header .menu_all .menu ul li > ul > li {margin-top:20px;}
 header .menu_all .menu ul li > ul > li > a {color:#000; transition:all 0.3s;}
 header .menu_all .menu ul li > ul > li > a:hover {color:#888;}
 /* 마우스 스크롤 */
-main #scrolltop {
+#scrolltop {
     position:fixed; right:50px; bottom:30px; z-index:99;
     background:rgba(200,200,200,0.5); border:1px solid #d9d9d9;
-    border-radius:50px; width:60px; height:60px;
+    border-radius:50px; padding:15px;
 }
-main #scrolltop img {width:25px; height:25px;}
+#scrolltop img {width:25px; height:25px;}
 main .page_btn {
     display:flex; flex-flow:row nowrap; justify-content: center;
     border-bottom:1px solid #d9d9d9; margin-top:150px;
@@ -115,9 +115,14 @@ main .page_btn li a {color:#fff;}
 main .page_btn li:hover a {color:#0279BB;}
 /* footer */
 footer {
-    height:20vh; border-top:1px solid #d9d9d9;
+    height:100%; border-top:1px solid #d9d9d9;
 }
-footer .footer_all {margin:70px 180px; display:flex; flex-flow:row nowrap; align-items: center; justify-content:space-between;}
+footer .footer_all {
+    margin:82px 181px; 
+    display:flex; flex-flow:row nowrap; 
+    align-items: center; 
+    justify-content:space-between;
+}
 footer .footer_left {display:flex;}
 footer .footer_left h1 {}
 footer .footer_left h1 a {}
