--- a/style/sub2.css
+++ b/style/sub2.css
@@ -11,31 +11,37 @@ main .main_all .ci_all .ci_top h1::after {
     display:inline-block; content:'';
     width:35px; height:1px; background: #888;
 }
-main .main_all .ci_all .ci_top p {font-size:1.5rem; font-weight:600; line-height:1.3em; margin-top:25px;}
-main .main_all .ci_all .ci_top p em {font-size:1.5rem; font-weight:700; color:#0DCB14;}
+main .main_all .ci_all .ci_top p {font-size:1.7rem; font-weight:700; line-height:40px; margin-top:25px;}
+main .main_all .ci_all .ci_top p em {font-size:1.7rem; font-weight:700; color:#0DCB14;}
 main .main_all .ci_all img {margin-top:95px;}
 main .main_all .ci_all .ci_explanation {}
-main .main_all .ci_all .ci_explanation p {margin:50px 0; line-height:1.4em;}
+main .main_all .ci_all .ci_explanation p {margin:50px 0; font-size:1.2rem; line-height:28px;}
 main .main_all .down_btn {}
 main .main_all .down_btn button {
-    width:200px; height:50px;
+    width:200px; height:50px; font-size:1.1rem;
     background:#fff; color:#0279BB; margin:80px 114px 112px 0;
     border:1px solid #0279BB; border-radius:50px;
 }
 main .main_all .down_btn button:last-child {margin-right:0;}
 main .main_all .down_btn button img {margin-left:50px; width:20px; height:20px;}
 main .main_all .down_btn #jpg {}
+main .main_all .down_btn button {transition:all 0.5s;}
+main .main_all .down_btn > button:hover {
+    transform:translateY(-1px); transition:all 0.5s;
+    box-shadow: 5px 7px 10px #d9d9d9;
+
+}
 main .main_all .down_btn #jpg img {}
 main .main_all .down_btn #ai {}
 main .main_all .down_btn #ai img {}
 main .main_all .regulation {}
-main .main_all .regulation h2 {font-size:1.5rem; color: #0279BB; width:130px;}
+main .main_all .regulation h2 {font-size:1.7rem; font-weight:500; color: #0279BB; width:110px;}
 main .main_all .regulation h2::after {
     display:inline-block; content:'';
     width:35px; height:1px; background: #888;
 }
 main .main_all .regulation h2:nth-child(4):after {display:none;}
-main .main_all .regulation h2:nth-child(4) {color:#222; font-size:1.4rem; width:100%; margin-top:95px; margin-bottom:6px;}
+main .main_all .regulation h2:nth-child(4) {color:#222; font-size:1.8rem; font-weight:600; width:100%; margin-top:95px; margin-bottom:6px;}
 main .main_all .regulation p:nth-child(2) {margin-top:30px; font-weight:600; font-size:1.3rem;}
 main .main_all .regulation p:nth-child(3) {margin-top:33px; line-height:1.4rem;}
 main .main_all .regulation .primary_color {border-top:1px solid #888;}
@@ -59,10 +65,10 @@ main .main_all .regulation .primary_color .daesang_color li:nth-child(7) span {b
 main .main_all .regulation .primary_color .daesang_color li ul {margin-top:7px;}
 main .main_all .regulation .primary_color .daesang_color li ul li:first-child {font-weight:600;}
 main .main_all .regulation .primary_color .daesang_color li ul li:last-child {line-height:1.4em;}
-main .main_all .regulation h3 {font-size:1.5rem; width:200px; margin-top:100px;}
-main .main_all .regulation h3::after {
+main .main_all .regulation h2:nth-child(6) {color:#222; font-size:1.7rem; font-weight:600; width:100%; margin-top:95px;}
+main .main_all .regulation h2:nth-child(6)::after {
     display:inline-block; content:'';
-    width:35px; height:1px; background: #888;
+    width:100%; height:1px; background: #888;
 }
 main .main_all .regulation .secondary_color {margin-top:94px;}
 main .main_all .regulation .secondary_color .daesang_color {
@@ -81,25 +87,25 @@ main .main_all .regulation .secondary_color .daesang_color li ul {margin-top:7px
 main .main_all .regulation .secondary_color .daesang_color li ul li {font-weight:600;}
 main .main_all .regulation .secondary_color .daesang_color li ul li:last-child {font-weight:400; margin-top:5px;}
 main .main_all .signature {margin-top:250px;}
-main .main_all .signature h4 {font-weight:600; font-size:1.5rem; width:100px; color:#0279BB;}
+main .main_all .signature h4 {font-weight:600; font-size:1.7rem; width:100px; color:#0279BB;}
 main .main_all .signature h4::after {
     display:inline-block; content:'';
     width:35px; height:1px; background: #888;
 }
-main .main_all .signature p {margin-top:34px; line-height:1.5em;}
+main .main_all .signature p {margin-top:34px; font-size:1.2rem; font-weight:600; line-height:1.5em;}
 main .main_all .signature ul {margin-top:100px;}
 main .main_all .signature ul li {}
 main .main_all .signature ul li p {font-size: 1.35rem; font-weight:600; margin-bottom:15px;}
 main .main_all .signature ul li img {margin-right:50px;}
 main .main_all .typeface {margin:250px 0;}
-main .main_all .typeface h5 {font-weight:600; font-size:1.5rem; width:80px; color:#0279BB;}
+main .main_all .typeface h5 {font-weight:600; font-size:1.7rem; width:70px; color:#0279BB;}
 main .main_all .typeface h5::after {
     display:inline-block; content:'';
     width:35px; height:1px; background: #888;
 }
-main .main_all .typeface p {margin-top:30px;}
+main .main_all .typeface p {margin-top:30px; font-size:1.25rem; font-weight:600;}
 main .main_all .typeface ul {display:flex; margin-top:80px;}
 main .main_all .typeface ul li {margin-right:50px;}
 main .main_all .typeface ul li:last-child {margin-right:0;}
-main .main_all .typeface ul li h6 {margin-bottom:50px; font-size:1.2rem; font-weight:600;}
+main .main_all .typeface ul li h6 {margin-bottom:50px; font-size:1.4rem; font-weight:600;}
 main .main_all .typeface ul li img {}
