--- a/style/sub3.css
+++ b/style/sub3.css
@@ -17,8 +17,8 @@ main .esg_chapter1 .bg1 .explanation {
     display:flex; align-items: center;
     justify-content:space-around;
 }
-main .esg_chapter1 .bg1 .explanation h2 {font-size:1.85rem; font-weight:700;}
-main .esg_chapter1 .bg1 .explanation p {font-size:1.1rem; line-height:1.5em;}
+main .esg_chapter1 .bg1 .explanation h2 {font-size:1.85rem; font-weight:700; color:#3A3A3A;}
+main .esg_chapter1 .bg1 .explanation p {font-size:1.25rem; line-height:40px; color:#3A3A3A;}
 main .esg_chapter2 {margin-bottom:500px; position: relative; width:100%;}
 main .esg_chapter2 img {}
 main .esg_chapter2 .bg2 {
@@ -29,7 +29,7 @@ main .esg_chapter2 .bg2 {
 }
 main .esg_chapter2 .bg2 h2 {font-size:1.85rem; font-weight:600; color:#FFf;}
 main .esg_chapter2 .bg2 h2 em {font-size:1.85rem; color:#F4A174;}
-main .esg_chapter2 .bg2 p {line-height:1.7em; color:#fff;}
+main .esg_chapter2 .bg2 p {line-height:40px; font-size:1.1rem; color:#fff;}
 main .esg_chapter2 .b2_btm {display:flex; align-items: center; justify-content:space-evenly;}
 main .esg_chapter2 .b2_btm .icon {display:flex; margin-top:30px;}
 main .esg_chapter2 .b2_btm .icon li {
@@ -47,18 +47,18 @@ main .esg_chapter2 .b2_btm .icon li .img_icon img {
     width:70px; height:70px;
 }
 main .esg_chapter2 .b2_btm .icon li span {margin-top:15px;}
-main .esg_chapter2 .b2_btm p {line-height:1.5em;}
+main .esg_chapter2 .b2_btm p {line-height:1.5em; font-size:1.1rem;}
 main .esg_chapter3 {position: relative; width:100%;}
-main .esg_chapter3 img {opacity:0.5;}
+main .esg_chapter3 > img {opacity:0.3;}
 main .esg_chapter3 .bg3 {
     width:100%;
-    position:absolute; top:250px; left:0;
+    position:absolute; top:30%; left:0;
     display:flex;
     align-items: center; justify-content:space-around;
 }
 main .esg_chapter3 .bg3 h2 {font-size:1.85rem; font-weight:600; color:#000;}
 main .esg_chapter3 .bg3 h2 em {font-size:1.85rem; font-weight:600; color:#0dcb14;}
-main .esg_chapter3 .bg3 p {line-height:1.7em;}
+main .esg_chapter3 .bg3 p {line-height:40px; font-size:1.1rem; font-weight:500;}
 main .esg_chapter3 .icon_btn2 {display:flex; align-items: center; justify-content:space-around; margin-bottom:280px;}
 main .esg_chapter3 .icon_btn2 ul {display:flex; margin-top:30px;}
 main .esg_chapter3 .icon_btn2 ul li {display:flex; flex-flow:column nowrap; align-items: center; margin-right:50px;}
@@ -69,4 +69,4 @@ main .esg_chapter3 .icon_btn2 ul li .img_icon {
 }
 main .esg_chapter3 .icon_btn2 ul li .img_icon img {width:70px; height:70px;}
 main .esg_chapter3 .icon_btn2 ul li span {margin-top:15px;}
-main .esg_chapter3 .icon_btn2 p {line-height:1.7em;}
+main .esg_chapter3 .icon_btn2 p {line-height:40px; font-size:1.2rem;}
