--- a/style/common.css
+++ b/style/common.css
@@ -5,7 +5,7 @@ header, main, footer {letter-spacing:-0.02em; min-width:1920px;}
 /* header */
 header {}
 header .h_all {
-    width:90%;
+    width:90%; position:absolute; top:0; left:0;
     display:flex; flex-flow:row nowrap;
     justify-content:space-between;
     margin:30px 120px; z-index:90;
@@ -15,11 +15,6 @@ header .h_all h1 a {}
 header .h_all h1 a img {}
 header .h_all .h_right {
     display:flex; flex-flow:row nowrap; align-items:center;
-}
-header .h_all .h_right .inquiry {
-    background:#d9d9d9; color:#fff;
-    padding:8px; border:1px solid #fff; border-radius:7px;
-    margin-right:35px;
 }
 header .h_all .h_right .language {display:flex; flex-flow:row nowrap; align-items:center; margin-right:30px;}
 header .h_all .h_right .language em {color:#222; margin-right:10px; font-size:1rem;}
@@ -34,7 +29,7 @@ header .h_all .h_right .menu_btn:hover span:first-child {transform:translateX(8p
 header .h_all .h_right .menu_btn:hover span:last-child {transform:translateX(-8px);}
 header .h_all .h_right .menu_btn span {
     display:inline-block; content:'';
-    width:30px; height:3px; background:#0279bb;
+    width:30px; height:3px; background:#fff;
     border-radius:50px; margin-bottom:6px;
     transition:all 0.5s;
 }
@@ -102,8 +97,9 @@ header .menu_all .menu ul li > ul > li > a:hover {color:#888;}
 }
 #scrolltop img {width:25px; height:25px;}
 main .page_btn {
+    background:#d9d9d9;
     display:flex; flex-flow:row nowrap; justify-content: center;
-    border-bottom:1px solid #d9d9d9; margin-top:150px;
+    border-bottom:1px solid #d9d9d9;
 }
 main .page_btn li {
     display:flex; align-items: center; justify-content: center;
